--- a/package.json
+++ b/package.json
@@ -1,53 +1,35 @@
 {
-  "name": "spacetime-tutorial",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "shadcn-add": "shadcn-ui add",
-    "generate:spacetime": "spacetime generate --lang typescript --out-dir src/module_bindings --project-path server"
-  },
-  "dependencies": {
-    "@clockworklabs/spacetimedb-sdk": "^0.8.1",
-    "@hookform/resolvers": "^3.3.4",
-    "@preact/signals-react": "^2.0.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@types/node": "^20.11.16",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.325.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "valtio": "^1.13.0",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@iconify/json": "^2.2.181",
-    "@svgr/core": "^8.1.0",
-    "@svgr/plugin-jsx": "^8.1.0",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
-    "shadcn-ui": "^0.8.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "typescript-plugin-css-modules": "^5.0.2",
-    "unplugin-icons": "^0.18.5",
-    "vite": "^5.0.8"
-  }
+	"name": "spacetime-tutorial",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview",
+		"shadcn-add": "shadcn-ui add",
+		"generate:spacetime": "spacetime generate --lang typescript --out-dir src/module_bindings --project-path server"
+	},
+	"dependencies": {
+		"@clockworklabs/spacetimedb-sdk": "^0.8.1",
+		"@preact/signals": "^1.2.2",
+		"preact": "^10.19.4",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@iconify/json": "^2.2.181",
+		"@preact/preset-vite": "^2.8.1",
+		"@svgr/core": "^8.1.0",
+		"@svgr/plugin-jsx": "^8.1.0",
+		"@types/node": "^20.11.16",
+		"autoprefixer": "^10.4.17",
+		"daisyui": "^4.6.2",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.2.2",
+		"typescript-plugin-css-modules": "^5.0.2",
+		"unplugin-icons": "^0.18.5",
+		"vite": "^5.0.8"
+	}
 }
