--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,7 @@
 		"isolatedModules": true,
 		"noEmit": true,
 		"jsx": "react-jsx",
-
-		"baseUrl": ".",
-		"paths": {
-			"@/*": ["./src/*"]
-		},
+		"jsxImportSource": "preact",
 
 		/* Linting */
 		"strict": true,
